--- a/index.Rmd
+++ b/index.Rmd
@@ -45,21 +45,17 @@ don't like using command line tools, take a look at
 [this list of GUIs](https://git-scm.com/downloads/guis).
 
 
-## Featured Happy Scientist: Lynn Conway
+## Featured Happy Scientist: Jerry C. Elliott
 
 <div align="center">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Lynn_Conway_July_2006.jpg/360px-Lynn_Conway_July_2006.jpg">
+<img src="https://www.siuestemcenter.org/wp-content/uploads/2020/10/JCHighEagle-e1602550145725-984x804.jpg"><br>
 <figcaption>
-Lynn Conway July 2006. Source: <a href="https://en.wikipedia.org/wiki/File:Lynn_Conway_July_2006.jpg" target="_blank">Wiki</a>
+Feature Image:  NASA/MSFC/Emmett Given. Source: <a href="https://www.siuestemcenter.org/2020/10/13/jerry-c-elliott-stem-like-me-story/" target="_blank">siuestemcenter.org</a>
 </figcaption>
 </div>
 
-> Lynn Ann Conway (born January 2, 1938) is an American computer scientist,
-electrical engineer, inventor, and transgender activist. Conway is notable for
-a number of pioneering achievements. She worked at IBM in the 1960s and is
-credited with the invention of **generalized dynamic instruction handling**, a key
-advance used in **out-of-order execution**, used by most modern computer processors
-to improve performance. -- ([Wiki](https://en.wikipedia.org/wiki/Lynn_Conway))
+> Jerry Chris Elliott High Eagle (born 1943) is a physicist and was one of the first Native Americans who worked at NASA. He is most known for his contributions as the lead retrofire officer during Apollo 13, where his actions saved the lives of the three astronauts on board. Elliott's work awarded him the Presidential Medal of Freedom, the highest civilian honor awarded by the President of the United States. -- ([Wiki](https://en.wikipedia.org/wiki/Jerry_C._Elliott))
+
 
 # Speaker
 
